# pywork

./: .gitignore  CODE_REVIEW.md  DEPLOY.md  LICENSE  README.md  TEST_CASES.md  analyze_search_result.py  check_content.py  check_data.py  check_routes.py  check_status.py  debug_search.py  design_guide.md  free-compute-2026.md  product_ai_agent_platform.md  product_strategy_report.md  product_vision_report.md  pyproject.toml  requirements.txt  save_search_result.py  test_api_search.py  test_engine_search.py  test_http_search.py  test_real_search.py  test_search_query.py  test_search_route.py
app/: __init__.py  config.py  crypto.py  log.py  main.py  rate_limiter.py  utils.py
data/: pywork.db  pywork.db-shm  pywork.db-wal
deploy/: DEPLOY-GUIDE.md  litestream-restore.service  litestream-standby.yml  litestream.service  litestream.yml  pywork-failover-watchdog.service  pywork-role-manager.service
design_demo/: DESIGN.md  index.html  index_v2_bento_dark.html  index_v3_magazine_dual_theme.html  index_v4_minimalist_grid.html  index_v7.1_bilingual_balance.html  index_v8_grand.html  index_v9_1_dense.html  index_v9_immersive.html
doc/: 2026-04-16-design-summary.md  ARCHITECTURE.md  CODE-REVIEW.md  COMMENTS-DESIGN.md  PROD-UPGRADE.md  THEME_SWITCHER_IMPLEMENTATION.md  code-review-2026-04-20.md  code-review-complete-summary.md  product_reform_report.md  product_report.md  pywork-auth-plugin_20260417.md  pywork-create-center_20260417.md  pywork-frontend-templates_20260417.md  pywork-github-oauth_20260417.md  pywork-homepage_20260417.md  pywork-validation_20260417.md
(+107 files in other folders)
